--- a/layouts/main.twig
+++ b/layouts/main.twig
@@ -9,12 +9,17 @@
     <script src="https://use.fontawesome.com/59ea93251c.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/sweetalert2/4.2.6/sweetalert2.min.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
-
-
-
 </head>
-<body >
+<body>
+<div class="side-nav-menu" role="navigation">
 
+</div>
+<div class="main-content">
+
+    <div class="main-page-option"></div>
+    <div class="main-page-option"></div>
+    <div class="main-page-option"></div>
+</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
