--- a/less/main.less
+++ b/less/main.less
@@ -1,30 +1,82 @@
 @bg-theme-color:#333;
+@side-nav-menu-margins:20px;
 
-
+.center{
+  margin-left: auto;
+  margin-right: auto;
+}
 .border{
   border:1px solid red;
 }
+.underline{
+  text-decoration: underline;
+}
+
 html{
   height:100%;
 }
 
 body{
+  color: white;
   width: 100%;
   max-width: 100%;
   height: 100%;
   overflow: auto;
+  button{
+    outline: none !important;
+  }
+
+
   .side-nav-menu{
     width: 200px;
     height: 100%;
-    background-color: @bg-theme-color;
+    -webkit-background-image: url("../img/black-bg-2.jpg");
+    -moz-background-image: url("../img/black-bg-2.jpg");
+    -o-background-image: url("../img/black-bg-2.jpg");
+    background: url("../img/black-bg-2.jpg") no-repeat center;
+    background-size: cover;
     float: left;
+    .company-logo{
+      img{
+        width: 80%;
+        height: 160px;
+        .center;
+        display: block;
+        margin-top:@side-nav-menu-margins;
+      }
+    }
+    .webpage-navigation{
+      .center;
+      width: 150px;
+      margin-top:@side-nav-menu-margins;
+      border-top:1px solid white;
+      border-bottom: 1px solid white;
+      padding-top: @side-nav-menu-margins;
+      padding-bottom: @side-nav-menu-margins;
+
+
+      .webpage-nav-button{
+        background: transparent;
+        border: none;
+        text-align: center;
+        line-height: 30px;
+        font-size: 14px;
+        width: 100%;
+      }
+    }
   }
+
+
+
+
+
   .main-content{
     height: 100%;
+    max-height: 100%;
     margin-left: 200px;
+    .border;
   }
 }
-
 
 //region main-page
 .main-page-option{
