https://themeforest.net/item/artcore-building-architecture-wordpress-theme/13024563?ref=cirvitis

--- a/less/classes.less
+++ b/less/classes.less
@@ -5,9 +5,9 @@
 .border{
   border:1px solid red;
 }
-.underline{
-  text-decoration: underline;
-}
 .no-border{
   border:none !important;
+}
+.clearfix{
+  clear: both;
 }
