--- a/less/main.less
+++ b/less/main.less
@@ -243,6 +243,13 @@ body{
       width: 988px;
       background-color: rgba(255,255,255,0.9) ;
       max-width: 100%;
+      margin: 0;
+      padding: 0;
+      h2{
+        margin: 0;
+        text-align: center;
+        padding: @side-nav-menu-margins;
+      }
     }
   }
 }
