--- a/less/main.less
+++ b/less/main.less
@@ -250,6 +250,12 @@ body{
         text-align: center;
         padding: @side-nav-menu-margins;
       }
+      .boost-select{
+        width: 100%;
+        max-width: 300px;
+        margin:15px 5px 15px 5px;
+        font-size: 16px;
+      }
     }
   }
 }
@@ -355,6 +361,7 @@ body{
     h1{
       text-align: center;
       color: rgb(213,214,210);
+      margin: 0;
     }
     .column{
       padding: 25px 0 25px 0 ;
