--- a/less/main.less
+++ b/less/main.less
@@ -25,14 +25,14 @@ body{
     position: fixed;
     top: 0;
     left: 0;
-    width: 200px;
+    width: @sidebar-width;
     height: 100%;
     background: url("../img/black-bg-2.jpg")no-repeat center ;
     background-size: cover;
     float: left;
     .company-logo{
       img{
-        width: 80%;
+        width: 50%;
         .center;
         display: block;
         margin-top:@side-nav-menu-margins * 2;
@@ -75,8 +75,8 @@ body{
     .social{
       position: absolute;
       bottom: @side-nav-menu-margins;
-      padding-left: 47px;
-      padding-right: 48px;
+      padding-left: 37px;
+      padding-right: 38px;
       color: @orange;
       .center;
       .social-button{
@@ -105,57 +105,52 @@ body{
 .main-content{
   height: 100%;
   max-height: 100%;
-  margin-left: 200px;
+  margin-left: @sidebar-width;
   color: red;
   .home{
     height: 100%;
     position: relative;
+    @media screen and (min-height: 700px){
+      max-height: 100%;
+      overflow: hidden;
+    };
+
     .tab{
       height: 100%;
       position: relative;
-    }
-    .tab::after{
-      position: absolute;
-      background-image: url("../img/logo.png");
-      background-repeat: no-repeat;
-      background-position: center;
-      background-size: 189px auto;
-      content:"";
-      width: 189px;
-      height: 189px;
-      top:50%;
-      left:50%;
-      transform:  translate(-50%,-50%);
-      background-color: rgba(0,0,0,0.6);
-    }
-    .tab:nth-of-type(1)::after{
-      animation-name: boosting-options;
-      animation-duration: 2s;
-      -webkit-animation-timing-function: ease;
-    }
-    .tab:nth-of-type(2)::after{
-      animation-name: boosting-options;
-      animation-duration: 2.5s;
-      -webkit-animation-timing-function: ease;
-    }
-    .tab:nth-of-type(3)::after{
-      animation-name: boosting-options;
-      animation-duration: 3s;
-      -webkit-animation-timing-function: ease;
+      padding: 0;
     }
     .tab1{
-
-      background: url("../img/Katarina.jpg") no-repeat center ;
+      height: 100%;
+      position: relative;
+      background: url("../img/cup2_banner.png") no-repeat center ;
       background-size: cover;
+      filter: grayscale(90%);
+      &:hover{
+        filter:grayscale(10%);
+      }
     }
     .tab2{
-      background: url("../img/Ashe.jpg") no-repeat center;
+      height: 50%;
+      position: relative;
+      background: url("../img/ImmortalsCrowd.png") no-repeat center;
       background-size: cover;
+      filter: grayscale(90%);
+      &:hover{
+        filter:grayscale(10%);
+      }
     }
     .tab3{
-      background: url("../img/Yasuo.jpg") no-repeat center ;
+      height: 50%;
+      position: relative;
+      background: url("../img/origen.jpg") no-repeat center ;
       background-size: cover;
+      filter: grayscale(95%);
+      &:hover{
+        filter:grayscale(10%);
+      }
     }
+
   }
 }
 //endregion
@@ -213,7 +208,7 @@ body{
 //region boosting
 
 .boosting-box{
-  background: url("../img/minion.jpg")no-repeat center ;
+  background: url("../img/IEM.jpg")no-repeat center ;
   background-size: cover;
   background-attachment: fixed;
   min-height: 100%;
