--- a/less/main.less
+++ b/less/main.less
@@ -21,6 +21,49 @@ body{
   button{
     outline: none !important;
   }
+
+
+
+  aside{
+    @media screen and (max-width:1050px){
+      width: 200px;
+    }
+
+    position: absolute;
+    top:0;
+    left: 0;
+    bottom: 0;
+    width: 260px;
+
+    .border;
+    .separator{
+      @media screen and (max-height: 680px){
+        margin: 10px auto;
+      }
+      @media screen and (max-height: 780px){
+        margin: 20px auto;
+      }
+      background: url("../img/sprite.png") no-repeat top left transparent;
+      display: block;
+      zoom: 1;
+      background-position: -24px -315px;
+      width: 143px;
+      height: 3px;
+      text-indent: -6000px;
+      text-align: left;
+      margin: 25px auto;
+
+
+    }
+
+    h1{
+      margin: 20px;
+      img{
+        width: 100%;
+      }
+    }
+  }
+
 }
 
 
